tests/neg/i12453.scala
trait I0 { def I1 [ I1 <: Array [ I1 ] ] : I1 } // error
